# rocfl

./: .gitignore  Dockerfile  README-UMICH.md  compose.yaml  pyproject.toml  pyrocfl.dockerfile
.github/workflows/: image.yml
pyrocfl/: Cargo.toml
pyrocfl/src/: lib.rs
src/: lib.rs
src/ocfl/: repo.rs
