[tool.poetry]
name = "pyrocfl"
version = "0.1.0"
description = "pyo3-rocfl"
authors = ["Greg Kostin <gkostin@umich.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
rustimport = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
